# handler/user/user.go
@@ -15,20 +15,22 @@ import (
 	// "github.com/jinzhu/gorm"
 )
 
-func Check(c *gin.Context) {
-	handler.SendResponse(c, "成功登录", nil)
+type Avatar struct {
+	Url  string
+	Sha  string
+	Path string
 }
 
-// @Summary  用户信息
+// @Summary	用户信息
 // @Tags user
 // @Description 获取用户信息
 // @Accept application/json
 // @Produce application/json
-// @Param token header string true "token"
+// @Param Authorization header string true "token"
 // @Success 200 {object} model.User "{"msg":"获取成功"}"
 // @Failure 400 {object} errno.Errno "{"error_code":"20001", "message":"Fail."} or {"error_code":"00002", "message":"Lack Param Or Param Not Satisfiable."}"
 // @Failure 500 {object} errno.Errno "{"error_code":"30001", "message":"Fail."} 失败"
-// @Router /user/Info [get]
+// @Router /user/info [get]
 
 func UserInfo(c *gin.Context) {
 	ID := c.MustGet("student_id").(string)
@@ -48,12 +50,12 @@ func UserInfo(c *gin.Context) {
 	}
 }
 
-// @Summary  修改用户名
+// @Summary	修改用户名
 // @Tags user
 // @Description 接收新的User结构体来修改用户名
 // @Accept application/json
 // @Produce application/json
-// @Param token header string true "token"
+// @Param Authorization header string true "token"
 // @Param User body model.Info true "需要修改的用户信息"
 // @Success 200 {object} handler.Response "{"msg":"修改成功"}"
 // @Failure 400 {object} errno.Errno "{"error_code":"20001", "message":"Fail."} or {"error_code":"00002", "message":"Lack Param Or Param Not Satisfiable."}"
@@ -71,24 +73,20 @@ func ChangeUserName(c *gin.Context) {
 		return
 	}
 	handler.SendResponse(c, "修改成功", nil)
-	c.Redirect(http.StatusMovedPermanently, "/user/Info"+Info.StudentID)
 }
 
-// @Summary  查看用户收藏
+// @Summary	查看用户收藏
 // @Tags user
 // @Description 查看用户收藏的通告
 // @Accept application/json
 // @Produce application/json
-// @Param token header string true "token"
+// @Param Authorization header string true "token"
 // @Success 200 {object} []model.Collection "{"msg":"获取成功"}"
 // @Failure 400 {object} errno.Errno "{"error_code":"20001","message":"Fail."}or {"error_code":"00002","message":"Lack Param or Param Not Satisfiable."}"
 // @Router /user/colletion [get]
 func CheckCollections(c *gin.Context) {
-	id, ok := c.Get("student_id")
-	if !ok {
-		handler.SendBadRequest(c, "没有ID", ok)
-	}
-	ID := id.(string)
+	ID := c.MustGet("student_id").(string)
+
 	collect, err := model.GetCollection(ID)
 	if err != nil {
 		c.JSON(http.StatusNonAuthoritativeInfo, gin.H{
@@ -98,21 +96,17 @@ func CheckCollections(c *gin.Context) {
 	handler.SendResponse(c, "获取成功", collect)
 }
 
-// @Summary  通告
+// @Summary	通告
 // @Tags user
 // @Description 查看用户发布过的通告
 // @Accept application/json
 // @Produce application/json
-// @Param token header string true "token"
+// @Param Authorization header string true "token"
 // @Success 200 {object} []model.Announcement "{"msg":"获取成功"}"
 // @Failure 400 {object} errno.Errno "{"error_code":"20001","message":"Fail."}or {"error_code":"00002","message":"Lack Param or Param Not Satisfiable."}"
-// @Router /user/publisher [get]
+// @Router /user/published [get]
 func UserPublished(c *gin.Context) {
-	id, ok := c.Get("student_id")
-	if !ok {
-		handler.SendBadRequest(c, "没有ID", ok)
-	}
-	ID := id.(string)
+	ID := c.MustGet("student_id").(string)
 	published, err := model.GetPublished(ID)
 	if err != nil {
 		c.JSON(http.StatusNonAuthoritativeInfo, gin.H{
@@ -123,26 +117,17 @@ func UserPublished(c *gin.Context) {
 	handler.SendResponse(c, "获取成功", published)
 }
 
-// @Summary 修改头像
+// @Summary	修改头像
 // @Tags user
 // @Description 修改用户头像
 // @Accept application/json
 // @Produce application/json
-// @Param token header string true "token"
+// @Param Authorization header string true "token"
 // @Param file formData file true "文件"
-// @Success 200 {object} model.User "{"mgs":"success"}"
-// @Failure 200 {object} errno.Errno "绑定发生错误"
-// @Failure 200 {object} errno.Errno "文件上传错误"
-// @Failure 200 {object} errno.Errno "无法创建文件夹"
-// @Failure 200 {object} errno.Errno "无法保存文件"
-// @Failure 200 {object} errno.Errno "数据无法更新"
-// @Failure 404 "该用户不存在"
-// @Router /user/profile [post]
-type Avatar struct {
-	Url  string
-	Sha  string
-	Path string
-}
+// @Success 200 {object} model.User " {"mgs":"success"}"
+// @Failure 400 {object} errno.Errno "上传失败"
+// @Failure 400 {object} errno.Errno "上传失败,请检查token与其他配置参数是否正确"
+// @Router /user/update [post]
 
 func UpdateUserProfile(c *gin.Context) {
 	ID := c.MustGet("student_id").(string)
